--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
 language: clojure
+env:
+  matrix:
+    - TEST_DIR=waiter DEPS_CMD='lein with-profiles +test voom build-deps' TEST_CMD='lein test'
+before_script: (cd $TEST_DIR && $DEPS_CMD)
+script: cd $TEST_DIR && $TEST_CMD
