--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: clojure
 env:
+  global:
+    - DEPS_CMD='lein with-profiles +test voom build-deps'
+    - TEST_CMD='lein test'
   matrix:
-    - TEST_DIR=waiter DEPS_CMD='lein with-profiles +test voom build-deps' TEST_CMD='lein test'
+    - TEST_DIR=waiter  
+    - TEST_DIR=kitchen
 before_script: (cd $TEST_DIR && $DEPS_CMD)
 script: cd $TEST_DIR && $TEST_CMD
