--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 jdk:
 - oraclejdk8
+branches:
+  only:
+  - master
 env:
   global:
     - DEPS_CMD='lein with-profiles +test voom build-deps'
