--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   global:
     - DEPS_CMD='lein with-profiles +test voom build-deps'
   matrix:
-    - TEST_DIR=waiter TEST_CMD='lein with-profiles +test-log test || { cat log/waiter-tests.log; exit 1; }'
+    - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
     - TEST_DIR=kitchen TEST_CMD='lein test'
 before_script: (cd $TEST_DIR && $DEPS_CMD)
 script: cd $TEST_DIR && $TEST_CMD
