--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ branches:
 env:
   global:
     - DEPS_CMD='lein with-profiles +test voom build-deps'
-    - TEST_CMD='lein test'
   matrix:
-    - TEST_DIR=waiter  
-    - TEST_DIR=kitchen
+    - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
+    - TEST_DIR=kitchen TEST_CMD='lein test'
 before_script: (cd $TEST_DIR && $DEPS_CMD)
 script: cd $TEST_DIR && $TEST_CMD
