--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ jdk:
 branches:
   only:
   - master
-env:
-  global:
-    - DEPS_CMD='lein with-profiles +test voom build-deps'
-  matrix:
-    - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
-    - TEST_DIR=kitchen TEST_CMD='lein test'
-before_script: (cd $TEST_DIR && $DEPS_CMD)
-script: cd $TEST_DIR && $TEST_CMD
+jobs:
+  include:
+    - stage: unit tests
+      before_script: (cd waiter && lein with-profiles +test voom build-deps)
+      script: cd waiter && ./bin/ci/run-unit-tests.sh
+      before_script: (cd kitchen && lein with-profiles +test voom build-deps)
+      script: cd kitchen && lein test
+    - stage: integration tests
+      script: echo running integration tests...
