--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
   include:
     - stage: unit tests
       script: cd waiter && lein with-profiles +test voom build-deps && ./bin/ci/run-unit-tests.sh
+    - stage: unit tests
       script: cd kitchen && lein with-profiles +test do voom build-deps, test
     - stage: integration tests
       script: echo running integration tests...
