Adds run-integration-tests.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ jobs:
     - stage: unit tests
       script: cd kitchen && lein with-profiles +test do voom build-deps, test
     - stage: integration tests
-      script: echo running integration tests...
+      script: cd waiter && lein with-profiles +test voom build-deps && ./bin/ci/run-integration-tests.sh
