--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ env:
     - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
     - TEST_DIR=kitchen TEST_CMD='lein test'
     - TEST_DIR=waiter TEST_CMD=./bin/ci/run-integration-tests.sh
-before_script: (lein downgrade 2.6.1 && cd $TEST_DIR && $DEPS_CMD)
+before_script: (yes | lein downgrade 2.6.1 && cd $TEST_DIR && $DEPS_CMD)
 script: cd $TEST_DIR && $TEST_CMD
