Increases nginx timeouts

--- a/waiter/bin/nginx.conf
+++ b/waiter/bin/nginx.conf
@@ -31,6 +31,12 @@ http {
 
             # Pass the appropriate Host header through to Waiter
             proxy_set_header Host $host:$server_port;
+
+            # Set the timeout period to upstream Waiters
+            proxy_connect_timeout 300;
+            proxy_send_timeout 300;
+            proxy_read_timeout 300;
+            send_timeout 300;
         }
     }
 }
