Removes the send_timeout config entry

--- a/waiter/bin/nginx.conf
+++ b/waiter/bin/nginx.conf
@@ -1,5 +1,5 @@
 daemon {NGINX_DAEMON};
-error_log log/nginx-error.log;
+error_log log/nginx.log info;
 pid log/nginx.pid;
 
 events {
@@ -8,6 +8,11 @@ events {
 
 http {
     access_log log/nginx-access.log;
+
+    # Set the timeout period to upstream Waiters
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+    proxy_read_timeout 300;
 
     upstream localhost {
         {NGINX_HTTP_UPSTREAM}
@@ -31,12 +36,6 @@ http {
 
             # Pass the appropriate Host header through to Waiter
             proxy_set_header Host $host:$server_port;
-
-            # Set the timeout period to upstream Waiters
-            proxy_connect_timeout 300;
-            proxy_send_timeout 300;
-            proxy_read_timeout 300;
-            send_timeout 300;
         }
     }
 }
