Fixes test-large-request

--- a/waiter/bin/nginx.conf
+++ b/waiter/bin/nginx.conf
@@ -25,7 +25,8 @@ http {
         large_client_header_buffers 4 32k;
 
         # Accept large bodies from clients
-        client_body_buffer_size 1024k;
+        client_body_buffer_size 16M;
+        client_max_body_size 16M;
 
         location / {
             # Don't buffer responses from proxied Waiters
