Runs the :explicit tests, but allowing failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,15 @@ env:
     - LEIN_CHMOD='chmod +x ./lein'
     - LEIN_DOWN='lein downgrade 2.6.1'
   matrix:
-    - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
-    - TEST_DIR=kitchen TEST_CMD='lein test'
-    - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-fast'
-    - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-slow'
+    fast_finish: true
+    include:
+      - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
+      - TEST_DIR=kitchen TEST_CMD='lein test'
+      - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-fast'
+      - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-slow'
+      - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test explicit'
+    allow_failures:
+      - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test explicit'
 cache:
   directories:
     - $HOME/.m2
