Runs the :explicit tests, but allowing failures (#37)
* Runs the :explicit tests, but allowing failures

* Moves allow_failures to a top-level matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ env:
     - TEST_DIR=kitchen TEST_CMD='lein test'
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-fast'
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-slow'
+    - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test explicit'
+matrix:
+    fast_finish: true
+    allow_failures:
+      - env: TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test explicit'
 cache:
   directories:
     - $HOME/.m2
