-- move scheduler files to scheduler package

--- a/waiter/resources/log4j-test.properties
+++ b/waiter/resources/log4j-test.properties
@@ -11,7 +11,7 @@ log4j.appender.file.Threshold=DEBUG
 # DEBUG is way too noisy for some categories
 log4j.logger.waiter.kv=INFO
 log4j.logger.waiter.service-description=INFO
-log4j.logger.waiter.scheduler=INFO
+log4j.logger.waiter.scheduler.scheduler=INFO
 log4j.logger.org.apache.http=INFO
 log4j.logger.org.eclipse.jetty.io=INFO
 log4j.logger.org.eclipse.jetty.http=INFO
