--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests-shell-scheduler.sh parallel-test integration-slow'
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests-shell-scheduler.sh parallel-test explicit'
     - TEST_DIR=token-syncer TEST_CMD='./bin/ci/run-unit-tests.sh'
+    - TEST_DIR=token-syncer TEST_CMD='./bin/ci/run-integration-tests.sh test integration'
 matrix:
     fast_finish: true
     allow_failures:
