--- a/token-syncer/resources/log4j.properties
+++ b/token-syncer/resources/log4j.properties
@@ -1,8 +1,11 @@
-log4j.rootLogger=DEBUG, DebugAppender
+log4j.rootLogger=DEBUG, stdout
 
-log4j.appender.DebugAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DebugAppender.Threshold=DEBUG
-log4j.appender.DebugAppender.File=log/token-syncer.log
-log4j.appender.DebugAppender.DatePattern='.'yyyy-MM-dd
-log4j.appender.DebugAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.DebugAppender.layout.ConversionPattern=%d{ISO8601} %-5p %-10t %20c %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{4} - %m%n
+log4j.appender.stdout.Threshold=DEBUG
+
+# DEBUG is way too noisy for some categories
+log4j.logger.org.apache.http=INFO
+log4j.logger.org.eclipse.jetty=INFO
