-- limit to log4j.logger.org.eclipse.jetty entry

--- a/token-syncer/resources/log4j-test.properties
+++ b/token-syncer/resources/log4j-test.properties
@@ -9,8 +9,4 @@ log4j.appender.file.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %
 log4j.appender.file.Threshold=DEBUG
 
 # DEBUG is way too noisy for some categories
-log4j.logger.org.apache.http=INFO
-log4j.logger.org.eclipse.jetty.io=INFO
-log4j.logger.org.eclipse.jetty.http=INFO
-log4j.logger.org.eclipse.jetty.server=INFO
-log4j.logger.org.eclipse.jetty.util.component=INFO
+log4j.logger.org.eclipse.jetty=INFO
