improves wait time in build by launching the waiter servers in parallel

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ env:
     - _JAVA_OPTIONS='' # Avoid unwanted _JAVA_OPTIONS set by Travis CI
   matrix:
     - TEST_DIR=kitchen TEST_CMD='lein test'
-    - TEST_DIR=token-syncer TEST_CMD='./bin/ci/run-unit-tests.sh'
-    - TEST_DIR=token-syncer TEST_CMD='./bin/ci/run-integration-tests.sh test integration'
+    - TEST_DIR=token-syncer TEST_CMD='./bin/ci/run-all-tests.sh'
     - TEST_DIR=waiter TEST_CMD=./bin/ci/run-unit-tests.sh
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-fast'
     - TEST_DIR=waiter TEST_CMD='./bin/ci/run-integration-tests.sh parallel-test integration-slow'
