--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -27,4 +27,4 @@ log4j.appender.requestlog.Threshold=INFO
 log4j.appender.requestlog.File=log/${waiter.logFilePrefix}request.log
 log4j.appender.requestlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.requestlog.layout=org.apache.log4j.PatternLayout
-log4j.appender.requestlog.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - %m%n
+log4j.appender.requestlog.layout.ConversionPattern=%m%n
