--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -18,3 +18,13 @@ log4j.appender.ErrorAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
 # CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
 log4j.appender.ErrorAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+
+log4j.category.waiter.request-log=INFO, requestlog
+log4j.additivity.waiter.request-log=false
+
+log4j.appender.requestlog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.requestlog.Threshold=INFO
+log4j.appender.requestlog.File=log/${waiter.logFilePrefix}request.log
+log4j.appender.requestlog.DatePattern='.'yyyy-MM-dd
+log4j.appender.requestlog.layout=org.apache.log4j.PatternLayout
+log4j.appender.requestlog.layout.ConversionPattern=%m%n
