Creates special RequestLog namespace

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -19,12 +19,12 @@ log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
 # CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
 log4j.appender.ErrorAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
 
-log4j.category.waiter.request-log=INFO, requestlog
-log4j.additivity.waiter.request-log=false
+log4j.category.RequestLog=INFO, RequestLogAppender
+log4j.additivity.RequestLog=false
 
-log4j.appender.requestlog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.requestlog.Threshold=INFO
-log4j.appender.requestlog.File=log/${waiter.logFilePrefix}request.log
-log4j.appender.requestlog.DatePattern='.'yyyy-MM-dd
-log4j.appender.requestlog.layout=org.apache.log4j.PatternLayout
-log4j.appender.requestlog.layout.ConversionPattern=%m%n
+log4j.appender.RequestLogAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RequestLogAppender.Threshold=INFO
+log4j.appender.RequestLogAppender.File=log/${waiter.logFilePrefix}request.log
+log4j.appender.RequestLogAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.RequestLogAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.RequestLogAppender.layout.ConversionPattern=%m%n
