--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -18,3 +18,13 @@ log4j.appender.ErrorAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
 # CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
 log4j.appender.ErrorAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+
+log4j.category.RequestLog=INFO, RequestLogAppender
+log4j.additivity.RequestLog=false
+
+log4j.appender.RequestLogAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RequestLogAppender.Threshold=INFO
+log4j.appender.RequestLogAppender.File=log/${waiter.logFilePrefix}request.log
+log4j.appender.RequestLogAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.RequestLogAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.RequestLogAppender.layout.ConversionPattern=%m%n
