--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -28,3 +28,13 @@ log4j.appender.RequestLogAppender.File=log/${waiter.logFilePrefix}request.log
 log4j.appender.RequestLogAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RequestLogAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RequestLogAppender.layout.ConversionPattern=%m%n
+
+log4j.category.Scheduler=DEBUG, InfoAppender, ErrorAppender, SchedulerAppender
+log4j.additivity.Scheduler=false
+
+log4j.appender.SchedulerAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.SchedulerAppender.Threshold=DEBUG
+log4j.appender.SchedulerAppender.File=log/${waiter.logFilePrefix}scheduler.log
+log4j.appender.SchedulerAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.SchedulerAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
