Use Log4j MDC to track correlation-ids
Closes #204

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -8,16 +8,14 @@ log4j.appender.InfoAppender.Threshold=INFO
 log4j.appender.InfoAppender.File=log/${waiter.logFilePrefix}waiter.log
 log4j.appender.InfoAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InfoAppender.layout=org.apache.log4j.PatternLayout
-# CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
-log4j.appender.InfoAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+log4j.appender.InfoAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID=%X{waiter.correlation-id}] %m%n
 
 log4j.appender.ErrorAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ErrorAppender.Threshold=ERROR
 log4j.appender.ErrorAppender.File=log/${waiter.logFilePrefix}waiter-error.log
 log4j.appender.ErrorAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
-# CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
-log4j.appender.ErrorAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+log4j.appender.ErrorAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID=%X{waiter.correlation-id}] %m%n
 
 log4j.category.RequestLog=INFO, RequestLogAppender
 log4j.additivity.RequestLog=false
