--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,10 @@ cache:
     - $HOME/.lein
     - $HOME/.local
     - $HOME/.m2
-    - $HOME/.voom-repos
 
 before_install:
   - unset _JAVA_OPTIONS  # Avoid unwanted _JAVA_OPTIONS set by Travis CI
   - echo "Sudo-enabled build? ${TRAVIS_SUDO}"
-  - voom-build() { lein with-profiles +test voom build-deps; }
 
 install:
   - ./waiter/bin/ci/install-lein
@@ -31,29 +29,29 @@ matrix:
       script: ./bin/ci/run.sh
 
     - env: NAME='Token syncer tests'
-      before_script: cd token-syncer && voom-build
+      before_script: cd token-syncer
       script: ./bin/ci/run-all-tests.sh
 
     - env: NAME='Waiter unit tests'
-      before_script: cd waiter && voom-build
+      before_script: cd waiter
       script: ./bin/ci/run-unit-tests.sh
 
     - env: "NAME='Waiter integration tests: marathon-fast'"
       services: docker
-      before_script: cd waiter && voom-build
+      before_script: cd waiter
       script: ./bin/ci/run-integration-tests.sh parallel-test integration-fast
 
     - env: "NAME='Waiter integration tests: marathon-slow'"
       services: docker
-      before_script: cd waiter && voom-build
+      before_script: cd waiter
       script: ./bin/ci/run-integration-tests.sh parallel-test integration-slow
 
     - env: "NAME='Waiter integration tests: shell-fast'"
       services: docker
-      before_script: cd waiter && voom-build
+      before_script: cd waiter
       script: ./bin/ci/run-integration-tests-shell-scheduler.sh parallel-test integration-fast
 
     - env: "NAME='Waiter integration tests: shell-slow'"
       services: docker
-      before_script: cd waiter && voom-build
+      before_script: cd waiter
       script: ./bin/ci/run-integration-tests-shell-scheduler.sh parallel-test integration-slow
