--- a/kitchen/Dockerfile
+++ b/kitchen/Dockerfile
@@ -2,3 +2,4 @@ FROM containersol/mesos-agent:1.0.0-0.1.0
 
 RUN mkdir -p /opt/kitchen
 COPY bin/kitchen /opt/kitchen
+COPY bin/waiter-init /usr/bin/waiter-init
