adds support for h2 backends

--- a/kitchen/bin/nginx-template.conf
+++ b/kitchen/bin/nginx-template.conf
@@ -10,14 +10,19 @@ http {
   access_log nginx_access.log main;
 
   server {
-    listen ${PORT0};
+    listen ${PORT0} ${NGINX_SSL} ${NGINX_HTTP2};
 
     server_name localhost;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate nginx-kitchen.crt;
+    ssl_certificate_key nginx-kitchen.key;
 
     location ~ \.* {
       proxy_http_version 1.1;
       proxy_pass http://localhost:${PORT1};
-      proxy_set_header X-Kitchen-Client-Proto-Version $server_protocol;
+      proxy_set_header X-Kitchen-Client-Proto $server_protocol;
+      proxy_set_header X-Kitchen-Client-Scheme $scheme;
     }
   }
 }
