adds support for HTTP/2 cleartext backends

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
-dist: trusty
+dist: xenial
 language: java
-jdk: oraclejdk8
+jdk: openjdk8
 
 addons:
+  apt:
+    packages:
+    - nginx
   artifacts: true
 
 branches:
@@ -26,6 +29,8 @@ install:
 matrix:
   include:
     - name: 'Kitchen tests'
+      language: python
+      python: "3.6"
       before_script: cd kitchen && ./bin/ci/setup.sh
       script: ./bin/ci/run.sh
 
