addresses feedback from sradack

--- a/kitchen/Dockerfile
+++ b/kitchen/Dockerfile
@@ -1,5 +1,8 @@
 FROM twosigma/mesos-agent:1.0.0-1.0.1604
 
+# we need nginx for our http/2 tests
+# gettext-base is needed for envsubst in the nginx server
+# python is needed to launch kitchen
 RUN apt-get update \
   && apt-get install -y gettext-base \
   && apt-get install -y nginx \
