--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -1,10 +1,10 @@
 # suppress inspection "UnusedProperty" for whole file
-log4j.rootLogger=INFO, InfoAppender, ErrorAppender
+log4j.rootLogger=DEBUG, InfoAppender, ErrorAppender
 
-log4j.category.waiter=INFO
+log4j.category.waiter=DEBUG
 
 log4j.appender.InfoAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.InfoAppender.Threshold=INFO
+log4j.appender.InfoAppender.Threshold=DEBUG
 log4j.appender.InfoAppender.File=log/${waiter.logFilePrefix}waiter.log
 log4j.appender.InfoAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InfoAppender.layout=org.apache.log4j.PatternLayout
@@ -38,3 +38,6 @@ log4j.appender.SchedulerAppender.File=log/${waiter.logFilePrefix}scheduler.log
 log4j.appender.SchedulerAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.SchedulerAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+
+log4j.logger.org.apache.http=DEBUG
+log4j.logger.org.eclipse.jetty=DEBUG
