removes connection-specific header fields when transmitting HTTP/1.x message via HTTP/2

--- a/test-apps/nginx/data/nginx-template.conf
+++ b/test-apps/nginx/data/nginx-template.conf
@@ -22,13 +22,13 @@ http {
     ssl_certificate_key nginx-server.key;
 
     location ~ \.* {
-      return 200 'From nginx';
       add_header X-Nginx-Client-Proto $server_protocol;
       add_header X-Nginx-Client-Scheme $scheme;
       add_header X-Nginx-Request-Method $request_method;
       add_header X-Nginx-Server-Name $server_name;
       add_header X-Nginx-Server-Port $server_port;
       add_header X-Nginx-Uri $uri;
+      proxy_pass http://127.0.0.1:${PORT2};
     }
   }
 }
