Unset default nginx index file for k8s fileserver

--- a/kubernetes/fileserver-container/nginx.conf
+++ b/kubernetes/fileserver-container/nginx.conf
@@ -15,6 +15,7 @@ http {
     location / {
       autoindex on;
       autoindex_format json;
+      index waiter_directory_index_disabled;
     }
   }
 }
