--- a/containers/test-apps/Dockerfile
+++ b/containers/test-apps/Dockerfile
@@ -10,4 +10,5 @@ COPY nginx/bin/run-nginx-server.sh /opt/nginx/bin/run-nginx-server.sh
 COPY nginx/data/nginx-template.conf /opt/nginx/data/nginx-template.conf
 COPY sediment/bin/run-sediment-server.sh /opt/sediment/bin/run-sediment-server.sh
 COPY sediment/data/sediment-uberjar.jar /opt/sediment/data/sediment-uberjar.jar
-COPY waiter-init/bin/waiter-init /usr/bin/waiter-init
+COPY waiter-init/bin/waiter-k8s-init /usr/bin/waiter-k8s-init
+COPY waiter-init/bin/waiter-mesos-init /usr/bin/waiter-mesos-init
