Restructure apps and scripts for docker image builds
- Reorganized the test-apps directory to make it more flat
- Moved the kubernetes fileserver docker image files into test-apps
- Refactored build-docker-images.sh builds all of our docker images
- Always use "latest" tag for docker images (which we expect local)
- Update integration scrips for smoother experience, both when run
  locally and when run in Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
     - name: 'Kitchen tests'
       language: python
       python: "3.6"
-      before_script: cd test-apps/kitchen && ./bin/ci/setup.sh
+      before_script: cd containers/test-apps && ./bin/ci/setup.sh
       script: ./bin/ci/run.sh
 
     - name: 'Token syncer tests'
