Eagerly upload completed container logs to S3
Moves S3 log backup logic into the fileserver sidecar.
Rather than waiting until the pod is being deleted before uploading,
the sidecar uploads the logs for each run of the main container as soon
as it detects that container's exit (via a sentinel file).

This also addresses a bug where log files are not uploaded to S3 if the
main app container is in a CrashBackOffLoop when the pod is deleted.

--- a/containers/fileserver/Dockerfile
+++ b/containers/fileserver/Dockerfile
@@ -1,6 +1,9 @@
-FROM nginx:1.15-alpine
+FROM nginx:1.16-alpine
 
+RUN apk add --no-cache bash curl
 COPY fileserver-start /bin/
+COPY s3-log-backup /bin/
 COPY nginx.conf /root/nginx.conf.template
+WORKDIR /root
 RUN mkdir -p /srv/www && echo 'Hello!' > /srv/www/hello.txt
 CMD ["fileserver-start"]
