only jetty http2 debugging

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -40,4 +40,4 @@ log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.SchedulerAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
 
 log4j.logger.org.apache.http=DEBUG
-log4j.logger.org.eclipse.jetty=DEBUG
+log4j.logger.org.eclipse.jetty.http2=DEBUG
