--- a/containers/test-apps/nginx/data/nginx-template.conf
+++ b/containers/test-apps/nginx/data/nginx-template.conf
@@ -1,4 +1,4 @@
-error_log nginx_error.log;
+error_log nginx_error.log info;
 pid nginx.pid;
 worker_processes 1;
 daemon off;
@@ -10,6 +10,7 @@ http {
       '"$request" $body_bytes_sent "$http_referer" '
       '"$http_user_agent" "$http_x_forwarded_for"';
   access_log nginx_access.log main;
+  error_log nginx_error.log info;
 
   server {
     listen ${PORT0} ${NGINX_SSL} ${NGINX_HTTP2};
