Always use http for healthchecks in proto-test

--- a/containers/test-apps/nginx/data/nginx-template.conf
+++ b/containers/test-apps/nginx/data/nginx-template.conf
@@ -14,7 +14,7 @@ http {
 
   server {
     listen ${PORT0} ${NGINX_SSL} ${NGINX_HTTP2};
-    listen ${PORT1} ${NGINX_SSL};
+    listen ${PORT1};
 
     server_name localhost;
 
