--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,12 @@ matrix:
     - name: 'Waiter integration tests: composite-fast'
       services: docker
       before_script: cd waiter
-      script: ./bin/ci/run-integration-tests.sh composite parallel-test integration-fast
+      script: ./bin/ci/run-integration-tests.sh composite eftest integration-fast
 
     - name: 'Waiter integration tests: composite-slow'
       services: docker
       before_script: cd waiter
-      script: ./bin/ci/run-integration-tests.sh composite parallel-test integration-slow
+      script: ./bin/ci/run-integration-tests.sh composite eftest integration-slow
 
     - name: 'Waiter integration tests: kubernetes-heavy'
       services: docker
@@ -60,17 +60,17 @@ matrix:
     - name: 'Waiter integration tests: kubernetes-lite'
       services: docker
       before_script: cd waiter
-      script: ./bin/ci/run-integration-tests.sh k8s parallel-test integration-lite
+      script: ./bin/ci/run-integration-tests.sh k8s eftest integration-lite
 
     - name: 'Waiter integration tests: marathon-fast'
       services: docker
       before_script: cd waiter
-      script: ./bin/ci/run-integration-tests.sh marathon parallel-test integration-fast
+      script: ./bin/ci/run-integration-tests.sh marathon eftest integration-fast
 
     - name: 'Waiter integration tests: marathon-slow'
       services: docker
       before_script: cd waiter
-      script: ./bin/ci/run-integration-tests.sh marathon parallel-test integration-slow
+      script: ./bin/ci/run-integration-tests.sh marathon eftest integration-slow
 
     - name: 'Waiter CLI integration tests'
       services: docker
