--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -49,4 +49,7 @@ log4j.logger.org.eclipse.jetty.http=DEBUG
 log4j.logger.org.eclipse.jetty.http.HttpGenerator=INFO
 log4j.logger.org.eclipse.jetty.http.HttpParser=INFO
 log4j.logger.org.eclipse.jetty.io=DEBUG
+log4j.logger.org.eclipse.jetty.io.ManagedSelector=INFO
+log4j.logger.org.eclipse.jetty.io.WriteFlusher=INFO
+log4j.logger.org.eclipse.jetty.io.ssl.SslConnection=INFO
 log4j.logger.org.eclipse.jetty.util.ssl=DEBUG
