adds jetty debug

--- a/waiter/resources/log4j-test.properties
+++ b/waiter/resources/log4j-test.properties
@@ -13,8 +13,8 @@ log4j.logger.waiter.kv=INFO
 log4j.logger.waiter.service-description=INFO
 log4j.logger.waiter.scheduler=INFO
 log4j.logger.org.apache.http=INFO
-log4j.logger.org.eclipse.jetty.io=INFO
-log4j.logger.org.eclipse.jetty.http=INFO
+log4j.logger.org.eclipse.jetty.io=DEBUG
+log4j.logger.org.eclipse.jetty.http=DEBUG
 log4j.logger.org.eclipse.jetty.server=INFO
 log4j.logger.org.eclipse.jetty.util.component=INFO
 log4j.logger.org.apache.zookeeper=WARN
