--- a/cli/integration/requirements.txt
+++ b/cli/integration/requirements.txt
@@ -1,6 +1,6 @@
 pip==9.0.1; python_version >= '3.6'
-pytest==4.3.0
-pytest-xdist==1.20.1
-pyyaml==5.1.2
-requests==2.20.0
-retrying==1.3.3
+pytest>=4.3.0
+pytest-xdist>=1.20.1
+pyyaml>=3.13
+requests>=2.20.0
+retrying>=1.3.3
