--- a/waiter/resources/log4j-test.properties
+++ b/waiter/resources/log4j-test.properties
@@ -9,6 +9,7 @@ log4j.appender.file.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %
 log4j.appender.file.Threshold=DEBUG
 
 # DEBUG is way too noisy for some categories
+log4j.logger.waiter=DEBUG
 log4j.logger.waiter.kv=INFO
 log4j.logger.waiter.service-description=INFO
 log4j.logger.waiter.scheduler=INFO
