Added logging for k8s and shell scheduler

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -47,4 +47,4 @@ log4j.appender.InstanceAppender.Threshold=DEBUG
 log4j.appender.InstanceAppender.File=log/${waiter.logFilePrefix}instance.log
 log4j.appender.InstanceAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InstanceAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.InstanceAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+log4j.appender.InstanceAppender.layout.ConversionPattern=%m%n
