--- a/waiter/resources/log4j-test.properties
+++ b/waiter/resources/log4j-test.properties
@@ -9,12 +9,21 @@ log4j.appender.file.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %
 log4j.appender.file.Threshold=DEBUG
 
 # DEBUG is way too noisy for some categories
+log4j.logger.waiter=DEBUG
 log4j.logger.waiter.kv=INFO
 log4j.logger.waiter.service-description=INFO
 log4j.logger.waiter.scheduler=INFO
 log4j.logger.org.apache.http=INFO
-log4j.logger.org.eclipse.jetty.io=INFO
-log4j.logger.org.eclipse.jetty.http=INFO
-log4j.logger.org.eclipse.jetty.server=INFO
-log4j.logger.org.eclipse.jetty.util.component=INFO
+log4j.logger.org.eclipse.jetty=DEBUG
+log4j.logger.org.eclipse.jetty.client=DEBUG
+log4j.logger.org.eclipse.jetty.client.HttpContent=INFO
+log4j.logger.org.eclipse.jetty.client.HttpReceiver=DEBUG
+log4j.logger.org.eclipse.jetty.client.HttpSender=DEBUG
+log4j.logger.org.eclipse.jetty.client.http=DEBUG
+log4j.logger.org.eclipse.jetty.http=DEBUG
+log4j.logger.org.eclipse.jetty.http.HttpGenerator=DEBUG
+log4j.logger.org.eclipse.jetty.http.HttpParser=DEBUG
+log4j.logger.org.eclipse.jetty.io=DEBUG
+log4j.logger.org.eclipse.jetty.server=DEBUG
+log4j.logger.org.eclipse.jetty.util.component=DEBUG
 log4j.logger.org.apache.zookeeper=WARN
