Changed the log level in log4j.properties

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -39,7 +39,7 @@ log4j.appender.SchedulerAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.SchedulerAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
 
-log4j.category.InstanceTracker=DEBUG, InstanceAppender
+log4j.category.InstanceTracker=INFO, InstanceAppender
 log4j.additivity.InstanceTracker=false
 
 log4j.appender.InstanceAppender=org.apache.log4j.DailyRollingFileAppender
