--- a/containers/reverse-proxy/Dockerfile
+++ b/containers/reverse-proxy/Dockerfile
@@ -3,4 +3,5 @@ FROM envoyproxy/envoy-alpine:v1.14.4
 COPY envoy-start /opt/waiter/envoy/bin/
 COPY envoy.yaml /etc/envoy/
 
-ENTRYPOINT /bin/sh /opt/waiter/envoy/bin/envoy-start
+
+ENTRYPOINT /opt/waiter/envoy/bin/envoy-start
