adds OOM failed instance logging for notifier

--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -48,3 +48,13 @@ log4j.appender.InstanceAppender.File=log/${waiter.logFilePrefix}instance.log
 log4j.appender.InstanceAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InstanceAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.InstanceAppender.layout.ConversionPattern=%m%n
+
+log4j.category.NotifierTracker=INFO, NotifierAppender
+log4j.additivity.NotifierTracker=false
+
+log4j.appender.NotifierAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.NotifierAppender.Threshold=INFO
+log4j.appender.NotifierAppender.File=log/${waiter.logFilePrefix}notifier.log
+log4j.appender.NotifierAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.NotifierAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.NotifierAppender.layout.ConversionPattern=%m%n
